colorchange, logo working

--- a/assets.qrc
+++ b/assets.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="images">
+    <file>canvascircle_g0O_icon.ico</file>
     <file>canvasproject_small.png</file>
   </qresource>
 </RCC>
