--- a/window.ui
+++ b/window.ui
@@ -17,15 +17,15 @@
    <string>Canvas Project</string>
   </property>
   <property name="windowIcon">
-   <iconset theme="black">
-    <normaloff>../../Downloads/canvaslogoicon_zqu_icon.ico</normaloff>../../Downloads/canvaslogoicon_zqu_icon.ico</iconset>
+   <iconset>
+    <normaloff>../../Downloads/canvascircle_g0O_icon.ico</normaloff>../../Downloads/canvascircle_g0O_icon.ico</iconset>
   </property>
   <property name="windowOpacity">
    <double>1.000000000000000</double>
   </property>
   <property name="styleSheet">
    <string notr="true">
-background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 rgba(99,33,191, 1), stop: 0.45 rgba(13,13,13, 1), stop: 1 rgba(13,13,13, 1));
+background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 rgba(160,0,0, 1), stop: 0.10 rgba(13,13,13, 1), stop: 1 rgba(13,13,13, 1));
 </string>
   </property>
   <property name="iconSize">
@@ -290,14 +290,14 @@ QPushButton:disabled {
      <string>Avaa Kurssienpalautuskansio</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="logo">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>180</y>
+      <x>630</x>
+      <y>170</y>
       <width>251</width>
       <height>161</height>
      </rect>
