--- a/window.ui
+++ b/window.ui
@@ -9,9 +9,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>909</width>
-    <height>546</height>
+    <width>947</width>
+    <height>561</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>1</horstretch>
+    <verstretch>1</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>947</width>
+    <height>561</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Canvas Project</string>
@@ -25,7 +37,7 @@
   </property>
   <property name="styleSheet">
    <string notr="true">
-background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 rgba(160,0,0, 1), stop: 0.10 rgba(13,13,13, 1), stop: 1 rgba(13,13,13, 1));
+background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1, stop: 0 rgba(50,13,13, 1), stop: 0.1 rgba(13,13,13, 1), stop: 1 rgba(30,13,13, 1));
 </string>
   </property>
   <property name="iconSize">
@@ -38,15 +50,15 @@ background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0, stop: 0 rgba(160,0,0, 1)
    <widget class="QPushButton" name="start_button">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>480</y>
-      <width>181</width>
+      <x>780</x>
+      <y>500</y>
+      <width>151</width>
       <height>51</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-	border: 2px solid rgb(195, 195, 195);
+	border: 1px solid rgb(195, 195, 195);
 	border-radius: 10px;	
 	color:rgb(255,255,255);
 	background-color: rgb(45,45,45);
@@ -80,10 +92,10 @@ QPushButton:disabled {
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>591</width>
-      <height>451</height>
+      <x>20</x>
+      <y>20</y>
+      <width>571</width>
+      <height>521</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -96,7 +108,7 @@ QPushButton:disabled {
         <string notr="true">background-color: rgb(38, 38, 38);
 border-radius: 30px;
 border-color:rgb(166, 166, 166);
-border-width: 3px;
+border-width: 2px;
 border-style:solid;
 color:white;
 padding:10px;</string>
@@ -118,64 +130,18 @@ p, li { white-space: pre-wrap; }
      </item>
     </layout>
    </widget>
-   <widget class="QPushButton" name="send_button">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>480</y>
-      <width>141</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">
-QPushButton {
-	border: 2px solid rgb(195, 195, 195);
-	border-radius: 10px;	
-	color:rgb(255,255,255);
-	background-color: rgb(45,45,45);
-	font-size:11pt;
-}
-QPushButton:hover {
-	border: 2px solid rgb(195, 195, 195);
-	background-color: rgb(55,55,55);
-}
-QPushButton:pressed {	
-	border: 2px solid rgb(230, 230, 230);
-	background-color: rgb(60,60,60);
-}
-
-QPushButton:disabled {	
-	border-radius: 10px;	
-	border: 2px solid rgb(66, 66, 66);
-	background-color:rgb(115,115,115);
-	color:rgb(255,255,255);
-	font: 8pt &quot;MS Shell Dlg 2&quot;;
-	text-decoration: line-through;
-	font-size:11pt;
-	
-
-}</string>
-    </property>
-    <property name="text">
-     <string>Lähetä</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="stop_button">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>480</y>
-      <width>121</width>
+      <x>610</x>
+      <y>500</y>
+      <width>151</width>
       <height>51</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-	border: 2px solid rgb(195, 195, 195);
+	border: 1px solid rgb(195, 195, 195);
 	border-radius: 10px;	
 	color:rgb(255,255,255);
 	background-color: rgb(45,45,45);
@@ -211,13 +177,19 @@ QPushButton:disabled {
      <rect>
       <x>650</x>
       <y>20</y>
-      <width>201</width>
+      <width>271</width>
       <height>61</height>
      </rect>
     </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-	border: 2px solid rgb(195, 195, 195);
+	border: 1px solid rgb(195, 195, 195);
 	border-radius: 10px;	
 	color:rgb(255,255,255);
 	background-color: rgb(45,45,45);
@@ -253,13 +225,19 @@ QPushButton:disabled {
      <rect>
       <x>650</x>
       <y>100</y>
-      <width>201</width>
+      <width>271</width>
       <height>61</height>
      </rect>
     </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-	border: 2px solid rgb(195, 195, 195);
+	border: 1px solid rgb(195, 195, 195);
 	border-radius: 10px;	
 	color:rgb(255,255,255);
 	background-color: rgb(45,45,45);
@@ -296,10 +274,10 @@ QPushButton:disabled {
     </property>
     <property name="geometry">
      <rect>
-      <x>630</x>
-      <y>170</y>
-      <width>251</width>
-      <height>161</height>
+      <x>600</x>
+      <y>150</y>
+      <width>351</width>
+      <height>201</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -312,10 +290,56 @@ QPushButton:disabled {
      <pixmap resource="assets.qrc">:/images/canvasproject_small.png</pixmap>
     </property>
     <property name="scaledContents">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="indent">
      <number>0</number>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="send_button">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>440</y>
+      <width>151</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">
+QPushButton {
+	border: 1px solid rgb(195, 195, 195);
+	border-radius: 10px;	
+	color:rgb(255,255,255);
+	background-color: rgb(45,45,45);
+	font-size:11pt;
+}
+QPushButton:hover {
+	border: 2px solid rgb(195, 195, 195);
+	background-color: rgb(55,55,55);
+}
+QPushButton:pressed {	
+	border: 2px solid rgb(230, 230, 230);
+	background-color: rgb(60,60,60);
+}
+
+QPushButton:disabled {	
+	border-radius: 10px;	
+	border: 2px solid rgb(66, 66, 66);
+	background-color:rgb(115,115,115);
+	color:rgb(255,255,255);
+	font: 8pt &quot;MS Shell Dlg 2&quot;;
+	text-decoration: line-through;
+	font-size:11pt;
+	
+
+}</string>
+    </property>
+    <property name="text">
+     <string>Lähetä</string>
     </property>
    </widget>
   </widget>
