--- a/window.ui
+++ b/window.ui
@@ -113,6 +113,12 @@ border-style:solid;
 color:white;
 padding:10px;</string>
        </property>
+       <property name="verticalScrollBarPolicy">
+        <enum>Qt::ScrollBarAlwaysOn</enum>
+       </property>
+       <property name="sizeAdjustPolicy">
+        <enum>QAbstractScrollArea::AdjustToContentsOnFirstShow</enum>
+       </property>
        <property name="readOnly">
         <bool>false</bool>
        </property>
@@ -175,8 +181,8 @@ QPushButton:disabled {
    <widget class="QPushButton" name="create_folder_button">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>20</y>
+      <x>630</x>
+      <y>30</y>
       <width>271</width>
       <height>61</height>
      </rect>
@@ -223,8 +229,8 @@ QPushButton:disabled {
    <widget class="QPushButton" name="open_folder_button">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>100</y>
+      <x>630</x>
+      <y>110</y>
       <width>271</width>
       <height>61</height>
      </rect>
@@ -275,7 +281,7 @@ QPushButton:disabled {
     <property name="geometry">
      <rect>
       <x>600</x>
-      <y>150</y>
+      <y>170</y>
       <width>351</width>
       <height>201</height>
      </rect>
@@ -302,8 +308,8 @@ QPushButton:disabled {
     </property>
     <property name="geometry">
      <rect>
-      <x>780</x>
-      <y>440</y>
+      <x>610</x>
+      <y>430</y>
       <width>151</width>
       <height>51</height>
      </rect>
@@ -340,6 +346,48 @@ QPushButton:disabled {
     </property>
     <property name="text">
      <string>Lähetä</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="create_credentials_button">
+    <property name="geometry">
+     <rect>
+      <x>780</x>
+      <y>430</y>
+      <width>151</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+	border: 1px solid rgb(195, 195, 195);
+	border-radius: 10px;	
+	color:rgb(255,255,255);
+	background-color: rgb(45,45,45);
+	font-size:11pt;
+}
+QPushButton:hover {
+	border: 2px solid rgb(195, 195, 195);
+	background-color: rgb(55,55,55);
+}
+QPushButton:pressed {	
+	border: 2px solid rgb(230, 230, 230);
+	background-color: rgb(60,60,60);
+}
+
+QPushButton:disabled {	
+	border-radius: 10px;	
+	border: 2px solid rgb(66, 66, 66);
+	background-color:rgb(115,115,115);
+	color:rgb(255,255,255);
+	font: 8pt &quot;MS Shell Dlg 2&quot;;
+	text-decoration: line-through;
+	font-size:11pt;
+
+
+}</string>
+    </property>
+    <property name="text">
+     <string>Luo tunnukset</string>
     </property>
    </widget>
   </widget>
