--- a/signinpopup.ui
+++ b/signinpopup.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>376</width>
-    <height>187</height>
+    <width>373</width>
+    <height>183</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -21,8 +21,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>619</width>
-    <height>413</height>
+    <width>373</width>
+    <height>183</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -78,43 +78,47 @@ background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1, stop: 0 rgba(50,13,13, 1
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>-20</x>
       <y>50</y>
-      <width>91</width>
+      <width>101</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel {
-	border: 1px solid rgb(195, 195, 195);
+	background-color: rgba(255,255,255,0);
 	color:rgb(255,255,255);
-	background-color: rgb(45,45,45);
 	font-size:11pt;
 }</string>
     </property>
     <property name="text">
      <string>Sähköposti:</string>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+    </property>
    </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>-20</x>
       <y>90</y>
-      <width>91</width>
+      <width>101</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel {
-	border: 1px solid rgb(195, 195, 195);
+	background-color: rgba(255,255,255,0);
 	color:rgb(255,255,255);
-	background-color: rgb(45,45,45);
 	font-size:11pt;
 }</string>
     </property>
     <property name="text">
      <string>Salasana:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
@@ -128,22 +132,24 @@ background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 1, stop: 0 rgba(50,13,13, 1
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel {
-	border: 1px solid rgb(195, 195, 195);
+	background-color: rgba(255,255,255,0);
 	color:rgb(255,255,255);
-	background-color: rgb(45,45,45);
 	font-size:11pt;
 }</string>
     </property>
     <property name="text">
      <string>Lisää Canvas tunnukset</string>
     </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
    </widget>
    <widget class="QPushButton" name="login_button">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>140</y>
-      <width>121</width>
+      <x>210</x>
+      <y>130</y>
+      <width>141</width>
       <height>31</height>
      </rect>
     </property>
@@ -183,9 +189,9 @@ QPushButton:disabled {
    <widget class="QLineEdit" name="username">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>90</x>
       <y>50</y>
-      <width>211</width>
+      <width>261</width>
       <height>31</height>
      </rect>
     </property>
@@ -204,9 +210,9 @@ QPushButton:disabled {
    <widget class="QLineEdit" name="password">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>90</x>
       <y>90</y>
-      <width>211</width>
+      <width>261</width>
       <height>31</height>
      </rect>
     </property>
